--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">Anup</a></li>
-                <li><a href="#">Shourya</a></li>
-                <li><a href="#">Lapa</a></li>
+                <li><a href="https://www.pinterest.com/pin/funny-stuff--300263500130968410/">Anup</a></li>
+                <li><a href="https://www.alamy.com/stock-photo-small-black-pug-puppy-dog-dressed-up-in-tiger-print-hoodie-pet-clothing-135838832.html">Shourya</a></li>
+                <li><a href="https://www.pinterest.com/pin/89649848804763953/">Lapa</a></li>
                 <li><a href="#">Vikash</a></li>
             </ul>
         </nav>
